--- a/src/NuGet.Services.ServiceBus/NuGet.Services.ServiceBus.csproj
+++ b/src/NuGet.Services.ServiceBus/NuGet.Services.ServiceBus.csproj
@@ -41,6 +41,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Transactions" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -49,22 +50,27 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BaseScopedMessageHandler.cs" />
+    <Compile Include="BaseSubscriptionProcessor.cs" />
     <Compile Include="BrokeredMessageSerializer.cs" />
     <Compile Include="BrokeredMessageWrapper.cs" />
     <Compile Include="Event.cs" />
+    <Compile Include="IBaseMessageHandler.cs" />
     <Compile Include="IBrokeredMessageSerializer.cs" />
     <Compile Include="IMessageHandler.cs" />
     <Compile Include="ISubscriptionProcessor.cs" />
     <Compile Include="ISubscriptionProcessorTelemetryService.cs" />
+    <Compile Include="ITransactionalCompleteAndSendMessageHandler.cs" />
     <Compile Include="OnMessageOptionsWrapper.cs" />
-    <Compile Include="ScopedMessageHandler.cs" />
-    <Compile Include="SubscriptionProcessor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.*.cs" />
     <Compile Include="SchemaAttribute.cs" />
+    <Compile Include="ScopedMessageHandler.cs" />
     <Compile Include="SubscriptionClientWrapper.cs" />
+    <Compile Include="SubscriptionProcessor.cs" />
     <Compile Include="SubscriptionProcessorNoTelemetryService.cs" />
     <Compile Include="TopicClientWrapper.cs" />
+    <Compile Include="TransactionalCompleteAndSendSubscriptionProcessor.cs" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="MicroBuild.Core">
