--- a/src/NuGet.Services.Validation/NuGet.Services.Validation.csproj
+++ b/src/NuGet.Services.Validation/NuGet.Services.Validation.csproj
@@ -49,6 +49,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CheckValidatorData.cs" />
     <Compile Include="Entities\BaseValidationIssue.cs" />
     <Compile Include="Entities\CertificateChainLink.cs" />
     <Compile Include="Entities\EndCertificate.cs" />
@@ -164,6 +165,8 @@
     <Compile Include="Migrations\ValidationMigrationsConfiguration.cs" />
     <Compile Include="PackageValidationEnqueuer.cs" />
     <Compile Include="PackageValidationMessageData.cs" />
+    <Compile Include="PackageValidationMessageType.cs" />
+    <Compile Include="ProcessValidationSetData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.*.cs" />
     <Compile Include="ServiceBusMessageSerializer.cs" />
